// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Default Component should render normal header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <ul class="user-links">
    <li><ish-login-status data-testing-id="user-status-desktop"></ish-login-status></li>
    <li class="d-none d-md-block">
      <ish-lazy-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-lazy-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler"></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-md-block"
      ng-reflect-view="full"
      ng-reflect-ng-class="d-md-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      ng-reflect-view="small"
      ng-reflect-ng-class="d-md-none"
      class="d-md-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          rel="home"
          routerlink="/home"
          data-testing-id="header-home-link-desktop"
          class="logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-quickorder-link></ish-lazy-quickorder-link></div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box>
      </div>
    </div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav
      class="global-nav navbar-expand-md"
      ng-reflect-collapsed="false"
      aria-label="navigation.main.aria_label"
    >
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render normal header adequately for mobile devices 1`] = `
<div class="header container mobile" ng-reflect-ng-class="mobile">
  <ul class="user-links">
    <li class="d-none d-md-block">
      <ish-lazy-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-lazy-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><div class="search-container header-search-container show" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-md-block"
      ng-reflect-view="full"
      ng-reflect-ng-class="d-md-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      ng-reflect-view="small"
      ng-reflect-ng-class="d-md-none"
      class="d-md-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          rel="home"
          routerlink="/home"
          data-testing-id="header-home-link-mobile"
          class="mobile-logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-quickorder-link></ish-lazy-quickorder-link></div>
    <div class="col-md-4"></div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav
      class="global-nav navbar-expand-md"
      ng-reflect-collapsed="true"
      aria-label="navigation.main.aria_label"
    >
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render normal header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <ul class="user-links">
    <li><ish-login-status data-testing-id="user-status-desktop"></ish-login-status></li>
    <li class="d-none d-md-block">
      <ish-lazy-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-lazy-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler"></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-md-block"
      ng-reflect-view="full"
      ng-reflect-ng-class="d-md-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      ng-reflect-view="small"
      ng-reflect-ng-class="d-md-none"
      class="d-md-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          rel="home"
          routerlink="/home"
          data-testing-id="header-home-link-desktop"
          class="logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-quickorder-link></ish-lazy-quickorder-link></div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box>
      </div>
    </div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav
      class="global-nav navbar-expand-md"
      ng-reflect-collapsed="false"
      aria-label="navigation.main.aria_label"
    >
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><fa-icon tabindex="0" class="header-icon" ng-reflect-icon="fas,search"></fa-icon>
      <div class="search-container header-search-container" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block"></div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-lg-block"
      ng-reflect-view="full"
      ng-reflect-ng-class="d-lg-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      ng-reflect-view="small"
      ng-reflect-ng-class="d-lg-none"
      class="d-lg-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          rel="home"
          routerlink="/home"
          data-testing-id="header-home-link-desktop"
          class="logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-quickorder-link></ish-lazy-quickorder-link></div>
    <div class="col-md-4"></div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav
      class="global-nav navbar-expand-md"
      ng-reflect-collapsed="false"
      aria-label="navigation.main.aria_label"
    >
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for mobile devices 1`] = `
<div class="header container mobile" ng-reflect-ng-class="mobile">
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><fa-icon tabindex="0" class="header-icon" ng-reflect-icon="fas,search"></fa-icon>
      <div class="search-container header-search-container" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block"></div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-lg-block"
      ng-reflect-view="full"
      ng-reflect-ng-class="d-lg-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      ng-reflect-view="small"
      ng-reflect-ng-class="d-lg-none"
      class="d-lg-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          rel="home"
          routerlink="/home"
          data-testing-id="header-home-link-mobile"
          class="mobile-logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-quickorder-link></ish-lazy-quickorder-link></div>
    <div class="col-md-4"></div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav
      class="global-nav navbar-expand-md"
      ng-reflect-collapsed="true"
      aria-label="navigation.main.aria_label"
    >
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><fa-icon tabindex="0" class="header-icon" ng-reflect-icon="fas,search"></fa-icon>
      <div class="search-container header-search-container" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block"></div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      data-testing-id="mini-basket-desktop"
      view="full"
      class="d-none d-lg-block"
      ng-reflect-view="full"
      ng-reflect-ng-class="d-lg-block"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      ng-reflect-view="small"
      ng-reflect-ng-class="d-lg-none"
      class="d-lg-none"
    ></ish-mini-basket>
  </div>
  <div class="mid-header row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          rel="home"
          routerlink="/home"
          data-testing-id="header-home-link-mobile"
          class="mobile-logo"
          aria-label="common.home.link"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-quickorder-link></ish-lazy-quickorder-link></div>
    <div class="col-md-4"></div>
  </div>
  <button type="button" class="navbar-toggler">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav
      class="global-nav navbar-expand-md"
      ng-reflect-collapsed="true"
      aria-label="navigation.main.aria_label"
    >
      <div class="main-navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;
